--- a/argocd-git-app.yaml
+++ b/argocd-git-app.yaml
@@ -12,5 +12,10 @@ spec:
     name: infra-gitops-repo
     repoURL: https://github.com/oysvendsen/infra
     path: argocd-manifests
+  syncPolicy:
+    automated:
+      selfHeal: true
+      prune: true
+
     
     
