move opentofu code into separate directory for exoscale. Add separate doc file for opentofu

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-.terraform
-exoscale_secret_keys.auto.tfvars
+#terraform related
+**/.terraform
+**/.terraform*
+**/*secret_keys.auto.tfvars
 *.tfstate
 *.tfstate.backup
+
+#emacs related
+**/*~
+**/#*#
