Make oth argo apps similar in terms of syncing and pruning.

--- a/argocd-manifests/nginx-ingress-controller.yaml
+++ b/argocd-manifests/nginx-ingress-controller.yaml
@@ -15,3 +15,7 @@ spec:
   syncPolicy:
     syncOptions:
     - CreateNamespace=true
+    - SkipDryRunOnMissingResource=true
+    automated:
+      selfHeal: true
+      prune: true
